--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -60,15 +60,14 @@
                     }
 
 
-                    <MudContainer style="@topMarginForContent" MaxWidth="MaxWidth.Medium">
-                        @*<MudContainer Style="height: 100vh;overflow: auto;">*@
-
+                    <MudContainer Style="@topMarginForContent" MaxWidth="MaxWidth.Medium" Class="pt-5">
+    
 
                         @Body
 
 
                     </MudContainer>
-                    <MudElement Style="position:fixed; bottom:0;" Class="mud-width-full">
+                    <MudElement>
                         <DirectoryConnectingIndicator />
                         
                         <AppFooter />
