--- a/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
+++ b/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
@@ -4,51 +4,40 @@
 
 <AppPageTitle>Recycle Bin</AppPageTitle>
 
-<h3>Recycle Bin</h3>
 <MudDataGrid T="IDirectoryEntryAdapter"
               Virtualize
              ColumnResizeMode="ResizeMode.Container"
+             Class=""
+             
               Hideable
+              Square
              Items="@deletedObjects"
              Filterable="false"
              SortMode="@SortMode.Multiple"
              Groupable="false">
+    <ToolBarContent>
+        <MudText Typo="Typo.h6">Recycle Bin</MudText>
+        <MudSpacer />
+        <MudButton Color="Color.Primary" Variant="@Variant.Outlined" OnClick="@(()=>{RestoreSelected();})">Restore Selected</MudButton>
+
+    </ToolBarContent>
     <Columns>
-        <PropertyColumn Property="x => x.ObjectType" />
-        <PropertyColumn Property="x => x.CanonicalName" />
-        <PropertyColumn Property="x => x.LastChanged" />
-        <TemplateColumn CellClass="d-flex justify-end">
+        <SelectColumn T="IDirectoryEntryAdapter" ShowInFooter=false ShowInHeader=true  />
+        <PropertyColumn Property="x => x.ObjectType" Title="Type"/>
+        <PropertyColumn Property="x => x.CanonicalName" Title="Name"/>
+        <PropertyColumn Property="x => x.LastKnownParent.OU.ToPrettyOu()" Title="Last OU"/>
+        <PropertyColumn Property="x => x.LastChanged" Title="Deleted"/>
+        <TemplateColumn CellClass="d-flex justify-end" Title="Restore">
             <CellTemplate>
                 <MudStack Row>
-                    <MudButton Color="Color.Primary" Variant="@Variant.Filled" OnClick="@(()=>{Restore(context.Item);})">Restore</MudButton>
+                    <MudButton Color="Color.Primary" Variant="@Variant.Outlined" OnClick="@(()=>{Restore(context.Item);})">Restore</MudButton>
 
                 </MudStack>
             </CellTemplate>
         </TemplateColumn>
-
+        
     </Columns>
 </MudDataGrid>
-@*<DataGrid TItem="IDirectoryEntryAdapter"
-          Data="deletedObjects"
-          Responsive
-     Virtualize>
-        <DataGridCommandColumn />
-        <DataGridColumn Field="@nameof(IDirectoryEntryAdapter.ObjectType)" Caption="Type"/>
-        <DataGridColumn Field="@nameof(IDirectoryEntryAdapter.CanonicalName)" Caption="Canonical Name"/>
-        <DataGridColumn Field="@nameof(IDirectoryEntryAdapter.LastChanged)" Caption="Deleted At" />
-        <DataGridColumn>
-            <DisplayTemplate>
-            <MudButton Color="Color.Primary" OnClick="@(()=>{ Directory.RestoreTombstone(context,context.LastKnownParent); })">Restore</MudButton>
-
-            </DisplayTemplate>
-
-
-        </DataGridColumn>
-
-    </DataGrid>
-    *@
-
-
 
 @code {
     List<IDirectoryEntryAdapter> deletedObjects = new();
@@ -76,5 +65,9 @@
             }
 
         }
+    }
+    async Task RestoreSelected()
+    {
+        
     }
 }
