--- a/BLAZAM/Shared/Copyright.razor
+++ b/BLAZAM/Shared/Copyright.razor
@@ -1,7 +1,7 @@
 ﻿@inherits MudText
 <MudText Class="@Class" 
      style="cursor:pointer; width:max-content" Color="Color.Tertiary">
-    <MudTooltip Style="width:max-content" Text="Written by Chris Jacobsen">
+    <MudTooltip ShowOnHover=false ShowOnClick=true Style="width:max-content" Text="Written by Chris Jacobsen">
         BLAZAM&#8482; @DateTime.Now.Year
     </MudTooltip>
 
