--- a/BLAZAM/Shared/UI/Dashboard/Widgets/NewGroupsWidget.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/NewGroupsWidget.razor
@@ -1,22 +1,22 @@
 ﻿@inherits Widget
 @attribute [Authorize]
-<NewEntriesWidgetDataGrid Items="@NewUsers" RowClick=@GoTo T="IADUser" Loading=LoadingData />
+<NewEntriesWidgetDataGrid Items="@NewGroups" RowClick=@GoTo T="IADGroup" Loading=LoadingData />
 
 @code {
-    List<IADUser> NewUsers
+    List<IADGroup> NewGroups
     {
-        get => UserStateService.CurrentUserState.Cache.Get<List<IADUser>>(this.GetType());
+        get => UserStateService.CurrentUserState.Cache.Get<List<IADGroup>>(this.GetType());
         set => UserStateService.CurrentUserState.Cache.Set(this.GetType(), value);
     }
 
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        NewUsers = (await Directory.Users.FindNewUsersAsync(false)).Where(u => u.CanRead).ToList();
+        NewGroups = (await Directory.Groups.FindNewGroupsAsync()).Where(u => u.CanRead).ToList();
         LoadingData = false;
         InvokeAsync(StateHasChanged);
     }
-    void GoTo(DataGridRowClickEventArgs<IADUser> args)
+    void GoTo(DataGridRowClickEventArgs<IADGroup> args)
     {
         Nav.NavigateTo(args.Item.SearchUri);
     }
