--- a/BLAZAM/Shared/UI/Inputs/AppCloseButton.razor
+++ b/BLAZAM/Shared/UI/Inputs/AppCloseButton.razor
@@ -1,12 +1,12 @@
 @inherits MudIcon
-<MudIcon Class="@Class"
+<MudButton Class="@(Class+" rounded-circle")"
          Color="@Color"
          Size=@Size
-         Style=@Style
+         IconClass="ma-0"
+         Style=@(Style+"width:min-content;height:min-content;min-width:0")
          Tag=@Tag
-         Title="@Title"
-         ViewBox="@ViewBox"
-         Icon="@Icons.Material.Filled.Close" @onclick=@OnClick />
+         
+         StartIcon="@Icons.Material.Filled.Close" @onclick=@OnClick />
 
 @code {
     [Parameter]
