--- a/BLAZAM/Shared/UI/Dashboard/Widgets/NewEntriesWidgetDataGrid.razor
+++ b/BLAZAM/Shared/UI/Dashboard/Widgets/NewEntriesWidgetDataGrid.razor
@@ -5,6 +5,7 @@
              Items="@Items"
               Dense
               Filterable
+              RowsPerPage="5"
              FilterMode="DataGridFilterMode.Simple"
              Loading=@Loading
               Square
