--- a/BLAZAM/Pages/Home.razor
+++ b/BLAZAM/Pages/Home.razor
@@ -31,7 +31,7 @@
         <ItemRenderer>
             <MudCard Class="my-5" Elevation="3">
             <MudCardHeader>
-                @context.Name
+                <MudText Typo="Typo.h6"> @context.Name</MudText>
                 <AppCloseButton OnClick=@(()=>{RemoveWidget(context);}) Style="right:10px;top:15px; position:absolute;" />
 
             </MudCardHeader>
